Fixed issues on small screen

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -126,6 +126,15 @@ hr {
   }
 }
 
+@media only screen and (max-width:400px) {
+  .navbar {
+    width:100%;
+  }
+  .site-header {
+    min-height: 110px;
+  }
+}
+
 .category-title {
   margin: 1em 0 0.5em 0;
 
